Rm unnecessary files [PT-186556758]

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Starter Projects</title>
-    <meta name="description" content="Starter Projects">
+    <title>Graph Performance Benchmarks</title>
+    <meta name="description" content="Graph Performance Benchmarks">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
